# debian-installer-companion

./: README.md  debian-installer-companion.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: debian-installer-companion.pot  sv.mo  sv.po
src/debian_installer_companion/: main.py
