[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-installer-companion"
version = "0.1.3"
description = "GTK4 Debian installation companion with hardware checks"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
debian-installer-companion = "debian_installer_companion.main:main"

[tool.setuptools.packages.find]
where = ["src"]
